--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -177,6 +177,24 @@
     });
 }
 
+.content-l_col-3-8 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
+    .u-respond-to-min(768px, {
+        .grid_column(3, 8);
+    });
+}
+
+.content-l_col-5-8 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
+    .u-respond-to-min(768px, {
+        .grid_column(5, 8);
+    });
+}
+
 
 /* topdoc
   name: Content layout column dividers
