--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -1,8 +1,23 @@
 
-<form class="reveal-on-focus" id="email-subscribe-form">
+<form class="reveal-on-focus"
+      id="email-subscribe-form"
+      action="/govdelivery-subscribe/success/">
+
+<!-- <form class="reveal-on-focus"
+      id="email-subscribe-form"
+      action="/subscriptions/new/"
+      method="POST"
+      enctype="application/x-www-form-urlencoded"> -->
 
     <div class="form-group">
-        <input class="reveal-on-focus_target" type="email" placeholder="Your email">
+        <label class="u-visually-hidden" for="email-subscribe-form_email">
+            Email address
+        </label>
+        <input class="reveal-on-focus_target"
+               id="email-subscribe-form_email"
+               type="email"
+               name="email"
+               placeholder="Your email">
     </div>
 
     <div class="form-group reveal-on-focus_content u-clearfix">
@@ -10,8 +25,8 @@
         <label class="form-group_item form-label">
             <input class="custom-input"
                    type="checkbox"
-                   name=""
-                   value="">
+                   name="code"
+                   value="tbd">
             {{ category.term }}
         </label>
     {% endfor %}
