--- a/_layouts/macros.html
+++ b/_layouts/macros.html
@@ -20,3 +20,13 @@
     {% endif %}
     {{ share_twitter_url }}
 {% endmacro %}
+
+{# Format a phone number to (XXX) XXX - XXXX when given XXXXXXXXXX #}
+{% macro format_phone(number) %}
+    {%- for char in number -%}
+        {{- '(' if loop.index == 1 -}}
+        {{ char }}
+        {{- ') ' if loop.index == 3 -}}
+        {{- ' - ' if loop.index == 6 -}}
+    {%- endfor %}
+{% endmacro %}
