--- a/_layouts/macros.html
+++ b/_layouts/macros.html
@@ -21,7 +21,7 @@
     {{ share_twitter_url }}
 {% endmacro %}
 
-{# Format a phone number to (XXX) XXX - XXXX when given XXXXXXXXXX #}
+{# Format a phone number to `(XXX) XXX - XXXX` when given `XXXXXXXXXX` #}
 {% macro format_phone(number) %}
     {%- for char in number -%}
         {{- '(' if loop.index == 1 -}}
@@ -29,4 +29,18 @@
         {{- ') ' if loop.index == 3 -}}
         {{- ' - ' if loop.index == 6 -}}
     {%- endfor %}
+{% endmacro %}
+
+{# Format address to:
+   ```
+   Line 1
+   Line 2 City, State Zip
+   ```
+   when given a contact post type #}
+{% macro format_address(contact) %}
+    {{ contact.street if contact.street != 'None' }}<br>
+    {{ contact.street_2 if contact.street_2 != 'None' }}
+    {{ contact.city + ',' if contact.city != 'None' }}
+    {{ contact.state if contact.state != 'None' }}
+    {{ contact.zip_code if contact.zip_code != 'None' }}
 {% endmacro %}
