--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8373,6 +8373,86 @@ a.category-slug.active {
    ========================================================================== */
 
 /* topdoc
+  name: Jump link
+  family: cfgov-misc
+  patterns:
+    - name: .jump-link
+      markup: |
+        <a class="jump-link" href="#">
+            Default jump link
+        </a>
+      codenotes:
+        - .jump-link
+    - name: .jump-link__large (modifier)
+      markup: |
+        <a class="jump-link jump-link__large" href="#">
+            Large jump link
+        </a>
+      codenotes:
+        - .jump-link__large
+  tags:
+    - cfgov-misc
+*/
+
+.jump-link {
+  position: relative;
+  margin-top: 1.1875em;
+  margin-right: 1.5em;
+  border-bottom-width: 1px;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1em;
+}
+
+.lt-ie9 .jump-link {
+  font-weight: normal !important;
+}
+
+.jump-link:before {
+  content: "\e002";
+}
+
+.lt-ie8 .jump-link {
+  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e002');
+}
+
+.jump-link__large {
+  margin-top: 1.05555556em;
+  margin-right: 1.5em;
+  font-size: 1.125em;
+}
+
+.jump-link__download:before {
+  content: "\e406";
+}
+
+.lt-ie8 .jump-link__download {
+  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e406');
+}
+
+.jump-link:before {
+  font-family: 'CFPB Minicons';
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  display: block;
+  position: absolute;
+  top: 0.25em;
+  right: -1.5em;
+  padding-left: 0.25em;
+  width: 1em;
+  border-bottom: none;
+}
+
+.list__links .jump-link {
+  margin-top: -1px;
+  font-size: 1em;
+}
+
+/* topdoc
   name: Micro copy
   family: cfgov-misc
   patterns:
@@ -11826,59 +11906,6 @@ a.focus .summary_header {
 
 .press-logo_logo {
   text-align: center;
-}
-
-.jump-link {
-  display: inline-block;
-  border-bottom-width: 1px;
-  margin-top: 1.5em;
-  margin-right: 1.5em;
-  position: relative;
-  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.125em;
-}
-
-.lt-ie9 .jump-link {
-  font-weight: normal !important;
-}
-
-.jump-link:before {
-  content: "\e002";
-}
-
-.lt-ie8 .jump-link {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e002');
-}
-
-.jump-link__download:before {
-  content: "\e406";
-}
-
-.lt-ie8 .jump-link__download {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e406');
-}
-
-.jump-link:before {
-  font-family: 'CFPB Minicons';
-  display: inline-block;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  display: block;
-  position: absolute;
-  top: 0.25em;
-  right: -1.5em;
-  padding-left: 0.25em;
-  width: 1em;
-  border-bottom: none;
-}
-
-.list__links .jump-link {
-  margin-top: -1px;
-  font-size: 1em;
 }
 
 .press-section_title {
