--- a/_layouts/macros.html
+++ b/_layouts/macros.html
@@ -39,7 +39,7 @@
    when given a contact post type #}
 {% macro format_address(contact) %}
     {{ contact.street if contact.street != 'None' }}<br>
-    {{ contact.street_2 if contact.street_2 != 'None' }}
+    {{ contact.street_2 + '<br>'|safe if contact.street_2 != 'None' }}
     {{ contact.city + ',' if contact.city != 'None' }}
     {{ contact.state if contact.state != 'None' }}
     {{ contact.zip_code if contact.zip_code != 'None' }}
