--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5349,6 +5349,22 @@ img {
    capital framework enhancements
    ========================================================================== */
 /* topdoc
+  name: Base styles
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: figure
+      markup: |
+        <figure>
+            <img src="" width="100" height="100">
+        </figure>
+  tags:
+    - cfgov-cf-enhancements
+*/
+figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+/* topdoc
   name: Expandables
   family: cfgov-cf-enhancements
   patterns:
