--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8466,7 +8466,6 @@ a.category-slug.active {
 
 .list__links .jump-link {
   margin-top: -1px;
-  font-size: 1em;
 }
 
 /* topdoc
@@ -11840,6 +11839,7 @@ a.focus .summary_header {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
+  margin-bottom: 1.875em;
 }
 
 .contact-person em,
@@ -11864,6 +11864,10 @@ a.focus .summary_header {
 .lt-ie9 .contact-person strong,
 .lt-ie9 .contact-person b {
   font-weight: normal !important;
+}
+
+.contact-person {
+  margin-bottom: 0.625em;
 }
 
 .contact-person_name {
