Breaks links in words to fit within their containers.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5352,6 +5352,18 @@ img {
   name: Base styles
   family: cfgov-cf-enhancements
   patterns:
+    - name: a
+      markup: |
+        <a href="#">
+            Some really really really really really really really really really
+            really really really really really long text.
+        </a>
+        <a href="#">
+            SomeReallyReallyReallyReallyReallyReallyReallyReallyReallyLongWord.
+        </a>
+      notes:
+        - "Anchor links should break words in order to remain confined to their
+           containers."    
     - name: figure
       markup: |
         <figure>
@@ -5360,6 +5372,9 @@ img {
   tags:
     - cfgov-cf-enhancements
 */
+a {
+  word-break: break-all;
+}
 figure {
   margin-left: 0;
   margin-right: 0;
