--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5379,6 +5379,9 @@ figure {
   margin-left: 0;
   margin-right: 0;
 }
+figure img {
+  border: 1px solid #babbbd;
+}
 /* topdoc
   name: Expandables
   family: cfgov-cf-enhancements
