--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6416,6 +6416,34 @@ figure img {
            grid_nested-col-group mixin to counter this."
         - "Note that the divs with inline styles are for demonstration purposes
            only and should not be used in production."
+    - name: .content-l_col__stack-on-cols (modifier)
+      markup: |
+            <div class="content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Half-width column from 600px to 801px
+                </div>
+            </div>
+            <div class="content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Half-width column from 600px to 801px
+                </div>
+            </div>
+      codenotes:
+        - .content-l_col__stack-on-cols
+      notes:
+        - "A modifier that allows you to have columns that behave as normal but
+           stack at the larger multi-column views. For example a
+           .content-l_col-1-2 would stack as normal from 0-599px, at 600px it
+           would convert into a column, and at 801px it would stack again."
+        - "This is really only useful for .content-l_col-1-2 since there is a
+           decent range between when it becomes a column (600px) to when the
+           modifier converts it back into a full-width container (801px).
+           .content-l_col-1-3 on the other hand would have a much smaller range,
+           768 to 801px."
   tags:
     - cfgov-layout
 */
@@ -6667,6 +6695,29 @@ figure img {
 }
 
 .lt-ie8 .content-l_col-5-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col__stack-on-cols {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col__stack-on-cols {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col__stack-on-cols {
   display: inline;
   margin-right: 0;
   zoom: 1;
