Fixes top margin for new 3-8 and 5-8 cols.

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -169,7 +169,10 @@
         }
     });
     .u-respond-to-min(768px, {
-        &.content-l_col-1-3 + &.content-l_col-1-3 {
+        &.content-l_col-1-3 + &.content-l_col-1-3,
+        &.content-l_col-3-8 + &.content-l_col-3-8,
+        &.content-l_col-3-8 + &.content-l_col-5-8,
+        &.content-l_col-5-8 + &.content-l_col-3-8 {
             margin-top: 0;
         }
     });
