--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6467,7 +6467,10 @@ figure img {
   margin-top: 0;
 }
 
-.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+.content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
   margin-top: 0;
 }
 
