--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -272,7 +272,10 @@
   }
 }
 @media only all and (min-width: 48em) {
-  .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+  .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+  .content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
     margin-top: 0;
   }
 }
