--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -274,7 +274,10 @@
   margin-top: 0;
 }
 
-.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+.content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
   margin-top: 0;
 }
 
