--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5629,7 +5629,10 @@ figure img {
   }
 }
 @media only all and (min-width: 48em) {
-  .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+  .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+  .content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
     margin-top: 0;
   }
 }
