--- a/static/css/main.less
+++ b/static/css/main.less
@@ -106,3 +106,4 @@ img {
 @import (less) "summary.less";
 @import (less) "blog-docs.less";
 @import (less) "press-resources.less";
+@import (less) "contact-us.less";
