--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -18,11 +18,11 @@
         </a>
       notes:
         - "Anchor links should break words in order to remain confined to their
-           containers."    
+           containers."
     - name: figure
       markup: |
         <figure>
-            <img src="" width="100" height="100">
+            <img src="http://placekitten.com/300/300">
         </figure>
   tags:
     - cfgov-cf-enhancements
@@ -35,11 +35,26 @@ a {
 figure {
     margin-left: 0;
     margin-right: 0;
-
-    img {
-        border: 1px solid @gray-50;
-    }
 }
+
+
+/* topdoc
+  name: Simple base style modifiers
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: figure.figure__bordered
+      markup: |
+        <figure class="figure__bordered">
+            <img src="http://placekitten.com/300/300">
+        </figure>
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.figure__bordered img {
+    border: 1px solid @gray-50;
+}
+
 
 /* topdoc
   name: Expandables
