Adds notes to the jump link.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -15,6 +15,11 @@
         </a>
       codenotes:
         - .jump-link
+      notes:
+        - "It is very important that the .jump-link_icon is positioned next to
+           the text without spaces between them. When there are spaces between
+           the icon and the text then there might be cases where the icon drops
+           to its own line."
     - name: .jump-link__large (modifier)
       markup: |
         <a class="jump-link jump-link__large" href="#">
