--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7664,19 +7664,14 @@ a.category-slug.active {
     - name: .jump-link
       markup: |
         <a class="jump-link" href="#">
-            Default jump link<span class="cf-icon cf-icon-right jump-link_icon"></span>
+            Default jump link
         </a>
       codenotes:
         - .jump-link
-      notes:
-        - "It is very important that the .jump-link_icon is positioned next to
-           the text without spaces between them. When there are spaces between
-           the icon and the text then there might be cases where the icon drops
-           to its own line."
     - name: .jump-link__large (modifier)
       markup: |
         <a class="jump-link jump-link__large" href="#">
-            Large jump link<span class="cf-icon cf-icon-right jump-link_icon"></span>
+            Large jump link
         </a>
       codenotes:
         - .jump-link__large
@@ -7684,7 +7679,9 @@ a.category-slug.active {
     - cfgov-misc
 */
 .jump-link {
+  display: inline-block;
   position: relative;
+  margin-right: 1.5em;
   border-bottom-width: 1px;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
@@ -7694,15 +7691,36 @@ a.category-slug.active {
 .lt-ie9 .jump-link {
   font-weight: normal !important;
 }
+.jump-link:before {
+  content: "\e002";
+}
+.lt-ie8 .jump-link {
+  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e002');
+}
 .jump-link__large {
   margin-right: 1.5em;
   font-size: 1.125em;
 }
-.jump-link_icon {
+.jump-link__download:before {
+  content: "\e406";
+}
+.lt-ie8 .jump-link__download {
+  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e406');
+}
+.jump-link:before {
+  font-family: 'CFPB Minicons';
   display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  display: block;
   position: absolute;
-  padding-top: 0.25em;
-  padding-left: 0.5em;
+  top: 0.25em;
+  right: -1.5em;
+  padding-left: 0.25em;
+  width: 1em;
+  border-bottom: none;
 }
 .list__links .jump-link {
   margin-top: -1px;
@@ -7715,11 +7733,10 @@ a.category-slug.active {
     border-width: 1px 0;
     margin-right: 0;
   }
-  .jump-link_icon {
+  .jump-link:before {
+    margin-top: -0.5em;
     top: 50%;
     right: 0;
-    padding: 0;
-    margin-top: -0.5em;
     text-align: right;
   }
 }
