--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -21,24 +21,31 @@
     </div>
 
     <div class="form-group reveal-on-focus_content u-clearfix">
-        <label class="form-group_item form-label">
-            <input class="custom-input"
-                   type="checkbox"
-                   name="code"
-                   value="USCFPB_4">
-            Blog
-        </label>
-    {#
     {% for category in query.possible_values_for('category')|sort(attribute='term') -%}
+    {% set govdelivery_categories = [
+        { 'name': 'Announcements & updates', 'code': 'USCFPB_9' },
+        { 'name': 'Consumer information', 'code': 'USCFPB_10' },
+        { 'name': 'Engagement', 'code': 'USCFPB_11' },
+        { 'name': 'Innovation & data', 'code': 'USCFPB_12' },
+        { 'name': 'Blog', 'code': 'USCFPB_13' },
+        { 'name': 'Op-Ed', 'code': 'USCFPB_14' },
+        { 'name': 'Press Release', 'code': 'USCFPB_15' },
+        { 'name': 'Speech', 'code': 'USCFPB_16' },
+        { 'name': 'Testimony', 'code': 'USCFPB_17' }
+    ] %}
+    {% for allowed_category in govdelivery_categories -%}
+    {% if category.term == allowed_category.name %}
         <label class="form-group_item form-label">
             <input class="custom-input"
                    type="checkbox"
                    name="code"
-                   value="USCFPB_4">
+                   value="{{ allowed_category.code }}">
             {{ category.term }}
         </label>
+    {% endif %}
     {% endfor %}
-    #}
+    {% endfor %}
+
     </div>
     <div class="form-group">
         <input class="btn" type="submit" class="btn" value="Sign up">
