--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -51,6 +51,11 @@ figure {
     - cfgov-cf-enhancements
 */
 
+.expandable_target__btn-secondary {
+    .btn();
+    .btn__secondary();
+}
+
 .expandable_header-right__float-on-medium {
     float: none;
 
