--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11405,6 +11405,73 @@ figure {
   tags:
     - cfgov-cf-enhancements
 */
+.expandable_target__btn-secondary {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0.57142857em 1em;
+  border: 0;
+  border-radius: 0.28571429em;
+  margin: 0;
+  vertical-align: middle;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.875em;
+  line-height: normal;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: .1s;
+  transition: .1s;
+  -webkit-appearance: none;
+}
+.lt-ie9 .expandable_target__btn-secondary {
+  font-weight: normal !important;
+}
+.lt-ie9 .expandable_target__btn-secondary {
+  font-weight: normal !important;
+}
+.lt-ie9 .expandable_target__btn-secondary {
+  font-weight: normal !important;
+}
+.expandable_target__btn-secondary,
+.expandable_target__btn-secondary:link,
+.expandable_target__btn-secondary:visited {
+  background-color: #0072ce;
+  color: #ffffff;
+}
+.expandable_target__btn-secondary:hover,
+.expandable_target__btn-secondary:focus,
+.expandable_target__btn-secondary.hover {
+  background-color: #328ed8;
+}
+.expandable_target__btn-secondary:active,
+.expandable_target__btn-secondary.active {
+  background-color: #33578e;
+}
+button.expandable_target__btn-secondary::-moz-focus-inner,
+input.expandable_target__btn-secondary::-moz-focus-inner {
+  border: 0;
+}
+.expandable_target__btn-secondary + .expandable_target__btn-secondary {
+  margin-left: 0.42857143em;
+}
+.expandable_target__btn-secondary,
+.expandable_target__btn-secondary:link,
+.expandable_target__btn-secondary:visited {
+  background-color: #75787b;
+  color: #ffffff;
+}
+.expandable_target__btn-secondary:hover,
+.expandable_target__btn-secondary:focus,
+.expandable_target__btn-secondary.hover {
+  background-color: #919395;
+}
+.expandable_target__btn-secondary:active,
+.expandable_target__btn-secondary.active {
+  background-color: #43484e;
+}
 .expandable_header-right__float-on-medium {
   float: none;
 }
